@@ -34,6 +34,7 @@ help available:
     seapy
     time
     toolbox
+    ae9ap9
 
 Copyright 2010-2012 Los Alamos National Security, LLC.
 """
@@ -66,7 +67,7 @@ def help():
 # put modules here that you want to be accessible through 'from spacepy import *'
 __all__ = ["seapy", "toolbox", "poppy", "coordinates", "time", "omni", 
            "irbempy", "empiricals", "radbelt", "data_assimilation", "pycdf",
-           "datamanager", "datamodel"]
+           "datamanager", "datamodel", "ae9ap9"]
 
 # on windows, make sure the Fortran libs are findable
 if sys.platform == 'win32':
